--- a/turbo.json
+++ b/turbo.json
@@ -52,6 +52,7 @@
         "RPC_URL_OPTIMISM",
         "RPC_URL_GNOSIS",
         "RPC_URL_MATIC",
+        "RPC_URL_BASE",
         "CRON_SECRET",
         "NEXT_PUBLIC_SKIP_PUBLISHED"
       ]
