--- a/turbo.json
+++ b/turbo.json
@@ -53,9 +53,10 @@
         "RPC_URL_GNOSIS",
         "RPC_URL_MATIC",
         "RPC_URL_BASE",
-        "CRON_SECRET",  
+        "CRON_SECRET",
         "NEXT_PUBLIC_SKIP_PUBLISHED",
-        "CI"
+        "CI",
+        "NEXT_PUBLIC_ALCHEMY_KEY"
       ]
     },
     "test": {
