--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: arbitrum-sepolia
+    network: base
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 8453
     source:
-      address: "0xf42f88c13804147b2fdda13c093ce14219aea395"
+      address: "0xc93830dd463516ED5f28f6cd4F837173B87FF389"
       abi: RegistryFactoryV0_0
-      startBlock: 112011139
+      startBlock: 25264018
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: arbitrum-sepolia
+    network: base
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 8453
     source:
-      address: "0x6ad70508F44aa0e86E7Af80Ccc4fc1f160C2df46"
+      address: "0xb39dFA15F96055664179e8EcaA890f3FA26c21e9"
       abi: PassportScorer
-      startBlock: 112011139
+      startBlock: 25264018
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -78,7 +78,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: arbitrum-sepolia
+    network: base
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -150,7 +150,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: arbitrum-sepolia
+    network: base
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -209,7 +209,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: arbitrum-sepolia
+    network: base
     source:
       abi: CollateralVault
     mapping:
