--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "graphql": "^16.8.1",
     "lodash-es": "^4.17.21",
     "lokijs": "^1.5.12",
+    "motion": "^12.4.7",
     "next": "14.2.23",
     "next-themes": "^0.2.1",
     "pino-pretty": "^10.2.3",
