NEXT_PUBLIC_SKIP_PUBLISHED in turbo

--- a/turbo.json
+++ b/turbo.json
@@ -57,7 +57,8 @@
         "NEXT_PUBLIC_SKIP_PUBLISHED",
         "CI",
         "NEXT_PUBLIC_SUBGRAPH_KEY",
-        "NEXT_PUBLIC_ALCHEMY_KEY"
+        "NEXT_PUBLIC_ALCHEMY_KEY",
+        "NEXT_PUBLIC_SKIP_PUBLISHED"
       ]
     },
     "test": {
