--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -13,6 +13,7 @@
     "manifest:matic": "node ./src/scripts/mustache matic",
     "manifest:gnosis": "node ./src/scripts/mustache gnosis",
     "manifest:base": "node ./src/scripts/mustache base",
+    "manifest:celo": "node ./src/scripts/mustache celo",
     "build:arbsep": "pnpm manifest:arbsep && graph codegen && graph build",
     "build:ethsep": "pnpm manifest:ethsep && graph codegen && graph build",
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
@@ -25,7 +26,8 @@
     "deploy:matic": "pnpm manifest:matic && graph deploy --studio gardens-v2---polygon",
     "deploy:gnosis": "pnpm manifest:gnosis && graph deploy --studio gardens-v2---gnosis",
     "deploy:base": "pnpm manifest:base && graph deploy --studio gardens-v2---base",
-    "deploy:prod": "export SUB_PROD_VERSION=0.1.13 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION && pnpm deploy:base -l $SUB_PROD_VERSION",
+    "deploy:celo": "pnpm manifest:celo && graph deploy --studio gardens-v2---celo",
+    "deploy:prod": "export SUB_PROD_VERSION=0.1.13 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION && pnpm deploy:base -l $SUB_PROD_VERSION && pnpm deploy:celo -l $SUB_PROD_VERSION",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
