--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -27,20 +27,22 @@
     "deploy:gnosis": "pnpm manifest:gnosis && graph deploy --studio gardens-v2---gnosis",
     "deploy:base": "pnpm manifest:base && graph deploy --studio gardens-v2---base",
     "deploy:celo": "pnpm manifest:celo && graph deploy --studio gardens-v2---celo",
-    "deploy:prod": "export SUB_PROD_VERSION=0.1.13 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION && pnpm deploy:base -l $SUB_PROD_VERSION && pnpm deploy:celo -l $SUB_PROD_VERSION",
+    "deploy:prod": "export SUB_PROD_VERSION=0.1.14 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION && pnpm deploy:base -l $SUB_PROD_VERSION && pnpm deploy:celo -l $SUB_PROD_VERSION",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
     "last-addr": "node src/scripts/last-addr.cjs",
     "proxies:arbsep": "node src/scripts/list-proxies.cjs arbsepolia",
-    "proxies:prod": "node src/scripts/list-proxies.cjs arbitrum && node src/scripts/list-proxies.cjs optimism && node src/scripts/list-proxies.cjs polygon && node src/scripts/list-proxies.cjs gnosis && node src/scripts/list-proxies.cjs base",
+    "proxies:prod": "node src/scripts/list-proxies.cjs arbitrum && node src/scripts/list-proxies.cjs optimism && node src/scripts/list-proxies.cjs polygon && node src/scripts/list-proxies.cjs gnosis && node src/scripts/list-proxies.cjs base && node src/scripts/list-proxies.cjs celo",
     "build-client": "mustache ../../apps/web/configs/subgraph.json .graphclientrc.template.yml > .graphclientrc.yml && graphclient build --fileType js",
     "build-all": "pnpm create-local && pnpm build && pnpm deploy:local",
     "deploy:arbsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-arbitrum-sepolia",
     "deploy:ethsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-ethsepolia",
     "codegen": "graph codegen",
     "graph": "graph",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "auth:prod": "graph auth 331af6df4ad01f2b1ce36d8d0010da42 --studio",
+    "auth:dev": "graph auth b3107442718f6b784afe1940708e3b54 --studio"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.69.2",
