--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: localhost
+    network: celo
     context:
       chainId: 
         type: Int
-        data: 1337
+        data: 42220
     source:
-      address: "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
+      address: "0xA71023bc64c9711C2037ab491DE80fd74504bd55"
       abi: RegistryFactoryV0_0
-      startBlock: 0
+      startBlock: 31270470
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -44,15 +44,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: localhost
+    network: celo
     context:
       chainId: 
         type: Int
-        data: 1337
+        data: 42220
     source:
-      address: "0x0165878a594ca255338adfa4d48449f69242eb8f"
+      address: "0xb39dfa15f96055664179e8ecaa890f3fa26c21e9"
       abi: PassportScorer
-      startBlock: 0
+      startBlock: 31270470
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -82,7 +82,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: localhost
+    network: celo
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -154,7 +154,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: localhost
+    network: celo
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -213,7 +213,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: localhost
+    network: celo
     source:
       abi: CollateralVault
     mapping:
