🛠️  Refactors deployment scripts and tests
- Updates build scripts to include IR build option.
- Comments out direct pool funding in deployment scripts and tests, likely for testing or refactoring purposes.
- Modifies keeper and protopian address setting in `RegistryFactoryTest` to use array inputs.

--- a/pkg/contracts/package.json
+++ b/pkg/contracts/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "make deploy",
     "fork": "make fork",
-    "_build": "forge build --sizes",
+    "build": "forge build --sizes",
+    "build:ir": "forge build --sizes --via-ir",
     "lint": "forge fmt",
     "test": "forge test -vvv",
     "test:force": "forge test -vvv --force",
