--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: optimism
+    network: optimism-sepolia
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 11155420
     source:
-      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
+      address: "0xEC8824e9a9498520891ec678e98c5bd3e65229c2"
       abi: RegistryFactoryV0_0
-      startBlock: 125112015
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -44,15 +44,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: optimism
+    network: optimism-sepolia
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 11155420
     source:
-      address: "0x084a5504dCFeac0ec3E10517247639e50c8DcFFd"
+      address: "0xe3DC6e82B599cD80904aCf0a3cd9f7401d92CC37"
       abi: PassportScorer
-      startBlock: 125112015
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -82,7 +82,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: optimism
+    network: optimism-sepolia
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -156,7 +156,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: optimism
+    network: optimism-sepolia
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -217,7 +217,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: optimism
+    network: optimism-sepolia
     source:
       abi: CollateralVault
     mapping:
