Upgrade missing pools n registries

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,11 @@
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#default-profile
+
+[etherscan]
+celo = { key = "${CELOSCAN_API_KEY}", url = "https://api.celoscan.io/api"}
+
+[rpc_endpoints]
+celo = "https://forno.celo.org"
+
 [profile.default]
 # solc-version = "0.8.19"
 src = 'pkg/contracts/src'
@@ -16,7 +23,6 @@ optimizer-runs = 0
 # prompt_timeout = 120
 fs_permissions = [{ access = "read-write", path = "./"}]
 
-celo = { key = "${CELOSCAN_API_KEY}", url = "https://api.celoscan.io/api"}
 bytecode_hash = "none"
 
 # fs_permissions = []
