--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,7 @@
 	url = https://github.com/safe-global/safe-smart-account
 [submodule "lib/protocol-monorepo"]
 	path = lib/protocol-monorepo
-	url = https://github.com/@superfluid-finance/protocol-monorepo
+	url = https://github.com/superfluid-org/protocol-monorepo
+[submodule "lib/protocol-monorepo2"]
+	path = lib/protocol-monorepo2
+	url = https://github.com/superfluid-finance/protocol-monorepo
