Change remapping and upgrade opsepolia n arbitrum contract with gda connect capability + subgraph

--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -140,7 +140,11 @@ templates:
           handler: handleSybilScorerUpdated
         - event: SuperfluidTokenUpdated(address)
           handler: handleSuperfluidTokenUpdated
- 
+        - event: SuperfluidGDAConnected(indexed address,indexed address)
+          handler: handleSuperfluidGDAConnected
+        - event: SuperfluidGDADisconnected(indexed address,indexed address)
+          handler: handleSuperfluidGDADisconnected
+
       file: ./src/mappings/cv-strategy.ts
 
   - kind: ethereum/contract
