--- a/pkg/e2e/tsconfig.json
+++ b/pkg/e2e/tsconfig.json
@@ -20,7 +20,7 @@
   "include": [
     "test/**/*",
     "playwright.config.ts",
-    "tests/connect.e2e.ts"
+    "tests/community.e2e.ts"
   ],
   "exclude": [
     "node_modules"
