Update readme and cleanup unused env var

--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -1,26 +1,30 @@
-# NEXT_PUBLIC_ENV_GARDENS=
-# NEXT_PUBLIC_ENV_GARDENS=prod
+NEXT_PUBLIC_SUBGRAPH_URL_ARB_SEP=https://api.studio.thegraph.com/proxy/29898/gv2-ethsepolia/version/latest/
+NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP=https://api.studio.thegraph.com/proxy/29898/gv2-opsepolia/version/latest/
 
-NEXT_PUBLIC_SUBGRAPH_URL_ETH_SEP=
-NEXT_PUBLIC_SUBGRAPH_URL_ARB_SEP=
-NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP=
-
-NEXT_PUBLIC_RPC_URL_OP_TESTNET=https://opt-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
-NEXT_PUBLIC_RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
-NEXT_PUBLIC_RPC_URL_ETH_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HERE
-
+RPC_URL_OP_TESTNET=https://opt-sepolia.g.alchemy.com/v2/<ALCHEMY_KEY>
+RPC_URL_ARB_TESTNET=https://arb-sepolia.g.alchemy.com/v2/<ALCHEMY_KEY>
+RPC_URL_ETH_TESTNET=https://arb-sepolia.g.alchemy.com/v2/<ALCHEMY_KEY>
+RPC_URL_MAINNET=https://eth-mainnet.g.alchemy.com/v2/<ALCHEMY_KEY>
+RPC_URL_OPTIMISM=https://opt-mainnet.g.alchemy.com/v2/<ALCHEMY_KEY>
+NEXT_PUBLIC_ALCHEMY_KEY=<ALCHEMY_KEY>
 RPC_URL_LOCAL=http://127.0.0.1:8545
 
-PINATA_JWT=
-GITCOIN_PASSPORT_API_KEY=
-SCORER_ID=
-PASSPORT_SCORER_ADDRESS=
-LIST_MANAGER_PRIVATE_KEY=
-CHAIN_ID=
-NEXT_ABLY_API_KEY=
-HOST=
-PORT=
+PINATA_JWT=<PINATA_JWT>
+NEXT_PUBLIC_PINATA_KEY=<PINATA_KEY>
+NEXT_PUBLIC_IPFS_GATEWAY=amaranth-bitter-lungfish-961.mypinata.cloud
 
-NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1
-NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE=1
+NEXT_ABLY_API_KEY=<ABLY_KEY>
+LIST_MANAGER_PRIVATE_KEY=<PRIVATE_KEY>
 
+NEXT_PUBLIC_WALLET_CONNECT_ID=2d6de32e43e4a71aab09e33c5f0f7713
+
+GITCOIN_PASSPORT_API_KEY=<GITCOIN_PASSPORT_API_KEY>
+SCORER_ID=6381
+CRON_SECRET=<CRON_SECRET>
+
+# NEXT_PUBLIC_ENV_GARDENS=prod
+
+NEXT_PUBLIC_SUBGRAPH_KEY=<SUBGRAPH_KEY>
+NEXT_PUBLIC_SKIP_PUBLISHED=true
+NEXT_PUBLIC_DIVVI_CONSUMER=0x809C9f8dd8CA93A41c3adca4972Fa234C28F7714
+NEXT_PUBLIC_DIVVI_PROVIDERS=0x0423189886d7966f0dd7e7d256898daeee625dca,0x5f0a55fad9424ac99429f635dfb9bf20c3360ab8
