--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 11155420
     source:
-      address: "0xf42f88c13804147b2fdda13c093ce14219aea395"
+      address: "0xEC8824e9a9498520891ec678e98c5bd3e65229c2"
       abi: RegistryFactoryV0_0
-      startBlock: 112011139
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -44,15 +44,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 11155420
     source:
-      address: "0x6ad70508F44aa0e86E7Af80Ccc4fc1f160C2df46"
+      address: "0xe3DC6e82B599cD80904aCf0a3cd9f7401d92CC37"
       abi: PassportScorer
-      startBlock: 112011139
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -81,15 +81,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoodDollarSybil
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 11155420
     source:
-      address: "0x9DdE3cE47cC11ee04Ea1e2C440116B3De6f11Ed8"
+      address: "0xb01AC9015E04ecC424E646eBAb32dfa7670Ae8a6"
       abi: GoodDollarSybil
-      startBlock: 112011139
+      startBlock: 29036730
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -107,13 +107,13 @@ dataSources:
         - event: UserInvalidated(indexed address)
           handler: handleUserInvalidated
         - event: GoodDollarStrategyAdded(indexed address,address)
-          handler: handleGoodDollarStrategyAdded
-      file: ./src/mappings/passport-scorer.ts
+          handler: handleStrategyAdded
+      file: ./src/mappings/good-dollar-sybil.ts
 
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -187,7 +187,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -252,7 +252,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: arbitrum-sepolia
+    network: optimism-sepolia
     source:
       abi: CollateralVault
     mapping:
