--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@graphprotocol/client-urql": "^2.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@mdxeditor/editor": "^3.42.0",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@sentry/nextjs": "^8",
@@ -55,6 +56,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.77.8",
     "sharp": "^0.33.5",
     "urql": "^4.0.6",
