--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: matic
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 137
+        data: 421614
     source:
-      address: "0x57a9835b204dbcc101dbf981625a3625e8043b9c"
+      address: "0xf42f88c13804147b2fdda13c093ce14219aea395"
       abi: RegistryFactoryV0_0
-      startBlock: 61584764
+      startBlock: 112011139
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -44,15 +44,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: matic
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 137
+        data: 421614
     source:
-      address: "0x190Fa730E6FfC64Ebd0031bE59b3007cC9eE2bB3"
+      address: "0x6ad70508F44aa0e86E7Af80Ccc4fc1f160C2df46"
       abi: PassportScorer
-      startBlock: 61584764
+      startBlock: 112011139
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -81,15 +81,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoodDollarSybil
-    network: matic
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 137
+        data: 421614
     source:
-      address: "0x7D08db0138fc0f0Dcc9C7120b301Ff07D3A7b300"
+      address: "0x9DdE3cE47cC11ee04Ea1e2C440116B3De6f11Ed8"
       abi: GoodDollarSybil
-      startBlock: 61584764
+      startBlock: 181411130
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -113,7 +113,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: matic
+    network: arbitrum-sepolia
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -187,7 +187,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: matic
+    network: arbitrum-sepolia
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -252,7 +252,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: matic
+    network: arbitrum-sepolia
     source:
       abi: CollateralVault
     mapping:
@@ -296,6 +296,19 @@ templates:
       handler: handleProposalMetadata
       entities:
         - ProposalMetadata
+      abis:
+        - name: CVStrategyV0_0
+          file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
+  
+  - name: PoolMetadata
+    kind: file/ipfs
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/mappings/pool-metadata.ts
+      handler: handlePoolMetadata
+      entities:
+        - PoolMetadata
       abis:
         - name: CVStrategyV0_0
           file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
