--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,8 @@
     "get-sign-message": "curl -X GET http://localhost:3000/api/passport/signMessage",
     "add-user-score": "curl -X POST http://localhost:3000/api/passport-oracle/writeScore -H 'Content-Type: application/json' -d '{\"user\":\"0x584ddfb0bdd922ff1fbf3e85e7e781d5816b4f23\"}'",
     "add-strategy": "curl -X POST http://localhost:3000/api/passport-oracle/addStrategy -H 'Content-Type: application/json' -d '{\"strategy\":\"0xfbeb532e7188cf8765e0e0141bedc076593172e2\",\"threshold\":\"200000\"}'",
-    "daily-job": "curl -X GET http://localhost:3000/api/passport-oracle/dailyJob"
+    "daily-job": "curl -X GET http://localhost:3000/api/passport-oracle/dailyJob",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.34",
