refactor: replace useConfig with useFlag for feature toggles and remove obsolete useCheat hook

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -28,3 +28,13 @@ NEXT_PUBLIC_SUBGRAPH_KEY=<SUBGRAPH_KEY>
 NEXT_PUBLIC_SKIP_PUBLISHED=true
 NEXT_PUBLIC_DIVVI_CONSUMER=0x809C9f8dd8CA93A41c3adca4972Fa234C28F7714
 NEXT_PUBLIC_DIVVI_PROVIDERS=0x0423189886d7966f0dd7e7d256898daeee625dca,0x5f0a55fad9424ac99429f635dfb9bf20c3360ab8
+
+# Configs
+NEXT_PUBLIC_FLAG_SHOWARCHIVED=
+NEXT_PUBLIC_FLAG_BYPASSSAFECHECK=
+NEXT_PUBLIC_FLAG_ALLOWNOPROTECTION=
+NEXT_PUBLIC_FLAG_SKIPPUBLISHED=
+NEXT_PUBLIC_FLAG_QUERYALLCHAINS=
+NEXT_PUBLIC_FLAG_SHOWEXCLUDEDCOMMUNITIES=
+NEXT_PUBLIC_FLAG_SHOWASCOUNCILSAFE=
+NEXT_PUBLIC_FLAG_SHOWUSESUPERTOKENBALANCE=
