--- a/turbo.json
+++ b/turbo.json
@@ -56,7 +56,15 @@
         "CRON_SECRET",
         "CI",
         "NEXT_PUBLIC_SUBGRAPH_KEY",
-        "NEXT_PUBLIC_ALCHEMY_KEY"
+        "NEXT_PUBLIC_ALCHEMY_KEY",
+        "NEXT_PUBLIC_FLAG_SHOWARCHIVED",
+        "NEXT_PUBLIC_FLAG_BYPASSSAFECHECK",
+        "NEXT_PUBLIC_FLAG_ALLOWNOPROTECTION",
+        "NEXT_PUBLIC_FLAG_SKIPPUBLISHED",
+        "NEXT_PUBLIC_FLAG_QUERYALLCHAINS",
+        "NEXT_PUBLIC_FLAG_SHOWEXCLUDEDCOMMUNITIES",
+        "NEXT_PUBLIC_FLAG_SHOWASCOUNCILSAFE",
+        "NEXT_PUBLIC_FLAG_SHOWUSESUPERTOKENBALANCE"
       ]
     },
     "test": {
