Fix foundry scripts compilation

--- a/foundry.toml
+++ b/foundry.toml
@@ -104,7 +104,7 @@ remappings = [
 # extra_output_files = []
 # names = false
 # sizes = false
-# via_ir = false
+via_ir = true
 # # caches storage retrieved locally for certain chains and endpoints
 # # can also be restricted to `chains = ["optimism", "mainnet"]`
 # # by default all endpoints will be cached, alternative options are "remote" for only caching non localhost endpoints and "<regex>"
